Bug 460789 - Minimal Shade Selector input window opens in wrong monitor - No way to drag it back to monitor where Krita is used
Summary: Minimal Shade Selector input window opens in wrong monitor - No way to drag i...
Status: RESOLVED FIXED
Alias: None
Product: krita
Classification: Applications
Component: Color Selectors (other bugs)
Version First Reported In: 5.1.1
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: vanyossi
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2022-10-21 03:24 UTC by sooz
Modified: 2022-10-21 04:58 UTC (History)
1 user (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description sooz 2022-10-21 03:24:05 UTC
SUMMARY
The dialog window for the Minimal Shade Selector opens on the wrong monitor.  There is no way to drag the input window back to Krita's workspace. Users who restrict their tablet to one screen cannot access the Minimal Shade Selector input window with stylus. A mouse is required to work on the other screen. 

STEPS TO REPRODUCE
1. Click the settings icon on Advanced Color Selector.
2. Click a down arrow in the Minimal Shade Selector to open the input dialog window.

OBSERVED RESULT
Minimal Shade Selector dialog window will open on the wrong screen. No way to drag this input window into Krita's workspace.

EXPECTED RESULT
Minimal Shade Selector should open inside Krita's workspace. Users who restrict a tablet to a single screen need this so input can take place using stylus.

SOFTWARE/OS VERSIONS
My setup:
MS Windows 10 - Krita 5.1.1
I use Krita on a laptop with a second monitor and Wacom Intuos tablet. Krita is used on the second monitor. The tablet is set to work only on this monitor when Krita is in use.
Comment 1 vanyossi 2022-10-21 04:02:04 UTC
As the repoter describes, the popup stays stuck in main monitor
Comment 2 vanyossi 2022-10-21 04:58:51 UTC
Git commit 24af47483303f805b1af1d74dd39cf6c29557c97 by Ivan Yossi.
Committed on 21/10/2022 at 04:55.
Pushed by ivany into branch 'master'.

Show shade selector in the correct screen

Take the coordinate to select screen from global
cursor position instead of internal widget coords.

M  +1    -3    plugins/dockers/advancedcolorselector/kis_shade_selector_line_combo_box.cpp

https://invent.kde.org/graphics/krita/commit/24af47483303f805b1af1d74dd39cf6c29557c97