Show shade selector in the correct screen

Take the coordinate to select screen from global
cursor position instead of internal widget coords.

BUG:460789